tests/fixtures/invalid/pow_list_bool_set.py
# Cannot call pow() with List[int], Bool, Set[int]
x = pow([1, 2, 3], True, {1, 2, 3})
